add rest of fields and fix formatting

--- a/journal.tex
+++ b/journal.tex
@@ -34,12 +34,23 @@ Roll: \line(1,0){100}  \hspace{1cm} Frame: \line(1,0){25}
 \bigskip
 
 % Actual printing notes
-\section{Printing}
+\section{Global printing}
+\begin{tabular}[t]{@{}l} 
+ Lens:  \hspace{.5cm} 50 \hspace{.5cm} 80 \hspace{.5cm} Other: \line(1,0){25} \\ \\
+ Base time:   \line(1,0){40} \\ \\
+ Base f-stop: \line(1,0){40} \\ \\
+ Base filter:   \line(1,0){40} \\ \\
+\end{tabular}
+\hfill
+\begin{tabular}[t]{l@{}}
+  Paper: \line(1,0){200} \\ \\
+  Paper size:  \hspace{.5cm} 8x10 \hspace{.5cm} 11x14 \hspace{.5cm} Other: \line(1,0){40} \\ \\
+  Enlarger position: 
+\end{tabular}
+  
 
-Lens:  \hspace{.5cm} 50 \hspace{.5cm} 80 \hspace{.5cm} Other: \line(1,0){25} \hfill Paper:  \hspace{.5cm} 8x10 \hspace{.5cm} 11x14 \hspace{.5cm} Other: \line(1,0){40}\\
-
-Base time:\line(1,0){40} \hfill Paper finish: Glossy \hspace{.5cm} Pearl \hspace{.5cm}  Other: \line(1,0){40}  \\
-Base filter:\\
-
+% Dodging and burning etc,
+\section{Local printing}
+\framebox(500,400){}
 
 \end{document}
