--- a/journal.tex
+++ b/journal.tex
@@ -2,7 +2,7 @@
 \documentclass{article}
 
 \usepackage{multido}
-\usepackage[left=.5in,right=.5in,top=.5in,bottom=.5in]{geometry}
+\usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
 % Don't number the sections
 \makeatletter
@@ -77,7 +77,7 @@ Roll: \line(1,0){100}  \hspace{1cm} Frame: \line(1,0){25}
 
 % Dodging and burning etc,
 \section{Local printing}
-\framebox(500,400){}
+\framebox(475, 380){}
 
 }
 
@@ -91,7 +91,7 @@ Roll: \line(1,0){100}  \hspace{1cm} Frame: \line(1,0){25}
 \pagenumbering{arabic} 
 
 % Repeat the print journal page n times to make the body of the book 
-\multido{}{50}{ \page}
+\multido{}{4}{\page}
 
 
 
