--- a/journal.tex
+++ b/journal.tex
@@ -1,4 +1,6 @@
-% This is intended to generate a journal for photographic printing. There's a simple title pages and then as many print sheets as you'd like (change the second param in the \multido to change the default)
+% This is intended to generate a journal for recording the details of darkroom printing. 
+
+% There's a simple title pages and then as many print sheets as you'd like (change the second param in the \multido to change the default)
 
 % Setup
 % ===============================================================================
